 cnp-pci-dss-1.3.3-ingress-a8xfdq7.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-pci-dss-1.3.3-ingress-qs2u2uu
  namespace: kube-system
spec:
  description: "This policy will allow the inbound connection"
  endpointSelector:
    matchLabels:
      controller-revision-hash: 7b445dc7b4
      k8s-app: cilium
      pod-template-generation: 1
  ingress:
    - fromEntities:
        - cluster
    - fromCIDRSet:
        - cidr: 10.10.10.1/16  #change with your id address
